--- a/Insurance-Jimi/insurance.html
+++ b/Insurance-Jimi/insurance.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Insurance Introduction</title>
-    <link rel="stylesheet" href="/Insurance - Jimi/style.css">
+    <link rel="stylesheet" href="/Insurance-Jimi/style.css">
 </head>
 <body>
     <div class="container">
-        <a href="/aboutme.html" class="home-button">Home</a>
+        <a href="/index.html" class="home-button">Home</a>
         <h1>Insurance Introduction</h1>
         
         <div class="insurance-section">
