--- a/contact us-Sook Ting/redirect_page.html
+++ b/contact us-Sook Ting/redirect_page.html
@@ -61,12 +61,12 @@
 
     <div class="navbar">
         <a href="/index.html">Home</a>
-        <a href="/login - Alysha/login.html">Account</a>
-        <a href="/Insurance - Jimi/insurance.html">Insurance</a>
-        <a href="/scheme - Javier/schemes.html">Scheme and subsidies</a>
-        <a href="/payment - Silin/payment.html">Payment</a>
-        <a href="/service - Jerald/services.html">Services</a>
-      </div>
+        <a href="/login-Alysha/login.html">Account</a>
+        <a href="/Insurance-Jimi/insurance.html">Insurance</a>
+        <a href="/scheme-Javier/schemes.html">Scheme and subsidies</a>
+        <a href="/payment-Silin/payment.html">Payment</a>
+        <a href="/service-Jerald/services.html">Services</a>
+    </div>
 
     <div class="container">
         <h2>Submitted Successfully</h2>
