--- a/login-Alysha/login.html
+++ b/login-Alysha/login.html
@@ -154,11 +154,11 @@
 
   <div class="navbar">
     <a href="/index.html">Home</a>
-    <a href="/login - Alysha/login.html">Account</a>
-    <a href="/Insurance - Jimi/insurance.html">Insurance</a>
-    <a href="/scheme - Javier/schemes.html">Scheme and subsidies</a>
-    <a href="/payment - Silin/payment.html">Payment</a>
-    <a href="/service - Jerald/services.html">Services</a>
+    <a href="/login-Alysha/login.html">Account</a>
+    <a href="/Insurance-Jimi/insurance.html">Insurance</a>
+    <a href="/scheme-Javier/schemes.html">Scheme and subsidies</a>
+    <a href="/payment-Silin/payment.html">Payment</a>
+    <a href="/service-Jerald/services.html">Services</a>
   </div>
 
 
@@ -221,7 +221,7 @@
 
     <div id="login" class="modal">
 
-      <form action="/service - Jerald/services.html" class="modal-content animate">
+      <form action="/service-Jerald/services.html" class="modal-content animate">
         <div class="imgcontainer">
           <span onclick="document.getElementById('login').style.display='none'" class="close"
             title="Close Modal">&times;</span>
@@ -260,7 +260,7 @@
 
   <script>
     document.getElementById('scanButton').addEventListener('click', function () {
-      window.location.href = '/service - Jerald/services.html'; // Replace with your target page URL
+      window.location.href = '/service-Jerald/services.html'; // Replace with your target page URL
     });
   </script>
 
