--- a/payment-Silin/payment.html
+++ b/payment-Silin/payment.html
@@ -90,20 +90,19 @@
 </head>
 
 <body>
-
     <div class="navbar">
         <a href="/index.html">Home</a>
-        <a href="/login - Alysha/login.html">Account</a>
-        <a href="/Insurance - Jimi/insurance.html">Insurance</a>
-        <a href="/scheme - Javier/schemes.html">Scheme and subsidies</a>
-        <a href="/payment - Silin/payment.html">Payment</a>
-        <a href="/service - Jerald/services.html">Services</a>
-      </div>
+        <a href="/login-Alysha/login.html">Account</a>
+        <a href="/Insurance-Jimi/insurance.html">Insurance</a>
+        <a href="/scheme-Javier/schemes.html">Scheme and subsidies</a>
+        <a href="/payment-Silin/payment.html">Payment</a>
+        <a href="/service-Jerald/services.html">Services</a>
+    </div>
 
 
     <div class="container">
         <h2>Payment Details</h2>
-        <form action="/payment - Silin/paid.html" method="post">
+        <form action="/payment-Silin/paid.html" method="post">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
 
@@ -118,7 +117,7 @@
             <button type="button" onclick="navigateToPage4()">Credit Card</button>
             <script>
                 function navigateToPage4() {
-                    window.location.href = "/payment - Silin/wallet.html"; // Navigate to wallet.html
+                    window.location.href = "/payment-Silin/wallet.html"; // Navigate to wallet.html
                 }
             </script>
 
@@ -126,7 +125,7 @@
             <button type="button" onclick="navigateToPage3()">Paynow</button>
             <script>
                 function navigateToPage3() {
-                    window.location.href = "/payment - Silin/img.html"; // Navigate to img.html
+                    window.location.href = "/payment-Silin/img.html"; // Navigate to img.html
                     console.log("paynow");
                 }
             </script>
@@ -135,7 +134,7 @@
             <button type="button" onclick="navigateToPage2()">Paypal</button>
             <script>
                 function navigateToPage2() {
-                    window.location.href = "/payment - Silin/paid.html"; // Navigate to paid.html
+                    window.location.href = "/payment-Silin/paid.html"; // Navigate to paid.html
                 }
             </script>
 
@@ -143,7 +142,7 @@
             <button type="button" onclick="navigateToPage2()">Bank Transfer</button>
             <script>
                 function navigateToPage2() {
-                    window.location.href = "/payment - Silin/paid.html"; // Navigate to paid.html
+                    window.location.href = "/payment-Silin/paid.html"; // Navigate to paid.html
                 }
             </script>
         </form>
