--- a/contact us-Sook Ting/contactus.html
+++ b/contact us-Sook Ting/contactus.html
@@ -13,11 +13,11 @@
 <body>
   <div class="navbar">
     <a href="/index.html">Home</a>
-    <a href="/login - Alysha/login.html">Account</a>
-    <a href="/Insurance - Jimi/insurance.html">Insurance</a>
-    <a href="/scheme - Javier/schemes.html">Scheme and subsidies</a>
-    <a href="/payment - Silin/payment.html">Payment</a>
-    <a href="/service - Jerald/services.html">Services</a>
+    <a href="/login-Alysha/login.html">Account</a>
+    <a href="/Insurance-Jimi/insurance.html">Insurance</a>
+    <a href="/scheme-Javier/schemes.html">Scheme and subsidies</a>
+    <a href="/payment-Silin/payment.html">Payment</a>
+    <a href="/service-Jerald/services.html">Services</a>
   </div>
 
   <div class="container mt-3">
@@ -101,7 +101,7 @@
           <div class="card-body">
             <div class="container mt-3">
               <h2>Feedback</h2>
-              <form action="/contact us - Sook Ting/redirect_page.html">
+              <form action="/contact us-Sook Ting/redirect_page.html">
 
                 <div class="mb-3 mt-3">
                   <label for="name">Name:</label>
