--- a/contactUs-Sook Ting/contactus.html
+++ b/contactUs-Sook Ting/contactus.html
@@ -101,7 +101,7 @@
           <div class="card-body">
             <div class="container mt-3">
               <h2>Feedback</h2>
-              <form action="/contact us-Sook Ting/redirect_page.html">
+              <form action="/contactUs-Sook Ting/redirect_page.html">
 
                 <div class="mb-3 mt-3">
                   <label for="name">Name:</label>
