--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
   <footer>
     <a href="#">Term of Use</a>
     <a href="#">User Guide</a>
-    <a href="/contact us-Sook Ting/contactus.html">Contact Us</a>
+    <a href="/contactUs-Sook Ting/contactus.html">Contact Us</a>
   </footer>
 
 </body>
