--- a/scheme-Javier/schemes.html
+++ b/scheme-Javier/schemes.html
@@ -119,7 +119,7 @@
     <div class="navbar">
         <a href="/index.html">Home</a>
         <a href="/login-Alysha/login.html">Account</a>
-        <a href="/Insurance-Jimi/insurance.html">Insurance</a>
+        <a href="/insurance.html">Insurance</a>
         <a href="/scheme-Javier/schemes.html">Scheme and subsidies</a>
         <a href="/payment-Silin/payment.html">Payment</a>
         <a href="/service-Jerald/services.html">Services</a>
