--- a/cart.html
+++ b/cart.html
@@ -112,13 +112,12 @@
 
   <div class="navbar">
     <a href="/index.html">Home</a>
-    <a href="/login-Alysha/login.html">Account</a>
-    <a href="/Insurance-Jimi/insurance.html">Insurance</a>
-    <a href="/scheme-Javier/schemes.html">Scheme and subsidies</a>
-    <a href="/payment-Silin/payment.html">Payment</a>
-    <a href="/service-Jerald/services.html">Services</a>
+    <a href="/login.html">Account</a>
+    <a href="/insurance.html">Insurance</a>
+    <a href="/schemes.html">Scheme and subsidies</a>
+    <a href="/payment.html">Payment</a>
+    <a href="/services.html">Services</a>
   </div>
-
 
   <h2>For Confirmation</h2>
   <p>For you, for me, for everyone</p>
@@ -146,9 +145,9 @@
   <script>
     function handleClick(response) {
       if (response === 'yes') {
-        window.location.href = '/scheme-Javier/schemes.html';  // Replace with the URL to redirect on "Yes"
+        window.location.href = '/schemes.html';  // Replace with the URL to redirect on "Yes"
       } else if (response === 'no') {
-        window.location.href = '/service-Jerald/description.html';  // Replace with the URL to redirect on "No"
+        window.location.href = '/description.html';  // Replace with the URL to redirect on "No"
       }
     }
   </script>
