--- a/confirmward.html
+++ b/confirmward.html
@@ -105,14 +105,13 @@
 
   <div class="navbar">
     <a href="/index.html">Home</a>
-    <a href="/login-Alysha/login.html">Account</a>
-    <a href="/Insurance-Jimi/insurance.html">Insurance</a>
-    <a href="/scheme-Javier/schemes.html">Scheme and subsidies</a>
-    <a href="/payment-Silin/payment.html">Payment</a>
-    <a href="/service-Jerald/services.html">Services</a>
+    <a href="/login.html">Account</a>
+    <a href="/insurance.html">Insurance</a>
+    <a href="/schemes.html">Scheme and subsidies</a>
+    <a href="/payment.html">Payment</a>
+    <a href="/services.html">Services</a>
   </div>
-
-
+  
   <h2>For confirmation</h2>
   <p></p>
   <p>For you, for me, for everyone</p>
@@ -135,9 +134,9 @@
   <script>
     function handleClick(answer) {
       if (answer === 'Yes') {
-        window.location.href = '/scheme-Javier/schemes.html'; // Change this to the URL of the page you want to navigate to when "Yes" is clicked
+        window.location.href = '/schemes.html'; // Change this to the URL of the page you want to navigate to when "Yes" is clicked
       } else if (answer === 'No') {
-        window.location.href = '/service-Jerald/description.html'; // Change this to the URL of the page you want to navigate to when "No" is clicked
+        window.location.href = '/description.html'; // Change this to the URL of the page you want to navigate to when "No" is clicked
       }
     }
   </script>
