--- a/description.html
+++ b/description.html
@@ -94,11 +94,11 @@
 
   <div class="navbar">
     <a href="/index.html">Home</a>
-    <a href="/login-Alysha/login.html">Account</a>
-    <a href="/Insurance-Jimi/insurance.html">Insurance</a>
-    <a href="/scheme-Javier/schemes.html">Scheme and subsidies</a>
-    <a href="/payment-Silin/payment.html">Payment</a>
-    <a href="/service-Jerald/services.html">Services</a>
+    <a href="/login.html">Account</a>
+    <a href="/insurance.html">Insurance</a>
+    <a href="/schemes.html">Scheme and subsidies</a>
+    <a href="/payment.html">Payment</a>
+    <a href="/services.html">Services</a>
   </div>
 
   </div>
@@ -147,7 +147,7 @@
         <img src="https://th.bing.com/th?id=OIF.p9jxisxe%2fo3R1rDVtvZSdA&rs=1&pid=ImgDetMain" width="450" height="200">
         <p>Doctor Kim, an exerienced doctor with over 15 years of experience. <br>Specialises in treating children
         </p>
-        <a href="/service-Jerald/dates.html" class="button">Book now</a>
+        <a href="/dates.html" class="button">Book now</a>
       </div>
     </div>
   </div>
