--- a/wallet.html
+++ b/wallet.html
@@ -63,11 +63,11 @@
 
     <div class="navbar">
         <a href="/index.html">Home</a>
-        <a href="/login-Alysha/login.html">Account</a>
-        <a href="/Insurance-Jimi/insurance.html">Insurance</a>
-        <a href="/scheme-Javier/schemes.html">Scheme and subsidies</a>
-        <a href="/payment-Silin/payment.html">Payment</a>
-        <a href="/service-Jerald/services.html">Services</a>
+        <a href="/login.html">Account</a>
+        <a href="/insurance.html">Insurance</a>
+        <a href="/schemes.html">Scheme and subsidies</a>
+        <a href="/payment.html">Payment</a>
+        <a href="/services.html">Services</a>
     </div>
 
 
@@ -96,7 +96,7 @@
 
     <script>
         function navigateToPage2() {
-            window.location.href = "/payment-Silin/paid.html"; // Navigate to paid.html
+            window.location.href = "/paid.html"; // Navigate to paid.html
         }
     </script>
 
