--- a/contactus.html
+++ b/contactus.html
@@ -6,18 +6,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <link rel="stylesheet" href="contact.css">
+  <link rel="stylesheet" href="/contact.css">
   <title>Contact Us</title>
 </head>
 
 <body>
   <div class="navbar">
     <a href="/index.html">Home</a>
-    <a href="/login-Alysha/login.html">Account</a>
-    <a href="/Insurance-Jimi/insurance.html">Insurance</a>
-    <a href="/scheme-Javier/schemes.html">Scheme and subsidies</a>
-    <a href="/payment-Silin/payment.html">Payment</a>
-    <a href="/service-Jerald/services.html">Services</a>
+    <a href="/login.html">Account</a>
+    <a href="/insurance.html">Insurance</a>
+    <a href="/schemes.html">Scheme and subsidies</a>
+    <a href="/payment.html">Payment</a>
+    <a href="/services.html">Services</a>
   </div>
 
   <div class="container mt-3">
@@ -101,7 +101,7 @@
           <div class="card-body">
             <div class="container mt-3">
               <h2>Feedback</h2>
-              <form action="/contactUs-Sook Ting/redirect_page.html">
+              <form action="/redirect_page.html">
 
                 <div class="mb-3 mt-3">
                   <label for="name">Name:</label>
