--- a/index.html
+++ b/index.html
@@ -110,11 +110,11 @@
 
   <div class="navbar">
     <a href="/index.html">Home</a>
-    <a href="/login-Alysha/login.html">Account</a>
+    <a href="/login.html">Account</a>
     <a href="/insurance.html">Insurance</a>
-    <a href="/scheme-Javier/schemes.html">Scheme and subsidies</a>
-    <a href="/payment-Silin/payment.html">Payment</a>
-    <a href="/service-Jerald/services.html">Services</a>
+    <a href="/schemes.html">Scheme and subsidies</a>
+    <a href="/payment.html">Payment</a>
+    <a href="/services.html">Services</a>
   </div>
 
 </head>
@@ -154,7 +154,7 @@
   <footer>
     <a href="#">Term of Use</a>
     <a href="#">User Guide</a>
-    <a href="/contactUs-Sook Ting/contactus.html">Contact Us</a>
+    <a href="/contactus.html">Contact Us</a>
   </footer>
 
 </body>
