--- a/paid.html
+++ b/paid.html
@@ -33,10 +33,10 @@
             margin-top: 20px;
         }
 
+
         .navbar {
             display: flex;
             background-color: #FAA0A0;
-            ;
             overflow: hidden;
             color: black;
         }
@@ -61,16 +61,18 @@
 
     <div class="navbar">
         <a href="/index.html">Home</a>
-        <a href="/login-Alysha/login.html">Account</a>
-        <a href="/Insurance-Jimi/insurance.html">Insurance</a>
-        <a href="/scheme-Javier/schemes.html">Scheme and subsidies</a>
-        <a href="/payment-Silin/payment.html">Payment</a>
-        <a href="/service-Jerald/services.html">Services</a>
+        <a href="/login.html">Account</a>
+        <a href="/insurance.html">Insurance</a>
+        <a href="/schemes.html">Scheme and subsidies</a>
+        <a href="/payment.html">Payment</a>
+        <a href="/services.html">Services</a>
     </div>
 
+
     <div class="container">
-        <h2>Submitted Successfully</h2>
-        <p>Thank you for your feedback.</p>
+        <h2>Payment Successful</h2>
+        <p>Thank you for your payment!</p>
+        <p>A confirmation email has been sent. Please check your email.</p>
     </div>
 </body>
 
