--- a/schemes.html
+++ b/schemes.html
@@ -118,11 +118,11 @@
 <body>
     <div class="navbar">
         <a href="/index.html">Home</a>
-        <a href="/login-Alysha/login.html">Account</a>
+        <a href="/login.html">Account</a>
         <a href="/insurance.html">Insurance</a>
-        <a href="/scheme-Javier/schemes.html">Scheme and subsidies</a>
-        <a href="/payment-Silin/payment.html">Payment</a>
-        <a href="/service-Jerald/services.html">Services</a>
+        <a href="/schemes.html">Scheme and subsidies</a>
+        <a href="/payment.html">Payment</a>
+        <a href="/services.html">Services</a>
     </div>
 
     <header>
@@ -138,7 +138,7 @@
                     certain outpatient expenses, as well as their healthcare needs in old age.</p>
                 <p>Eligibility: Any CPF member who contributes to Medisave and has a positive Medisave balance.</p>
                 <p>Benefits: Can be used to pay for personal and family's hospitalisation.</p>
-                <a href="/Insurance-Jimi/insurance.html" class="button-link"><button>Option 1</button></a>
+                <a href="/insurance.html" class="button-link"><button>Option 1</button></a>
             </div>
             <div class="scheme">
                 <h3>Scheme 2: MediShield Life</h3>
