--- a/services.html
+++ b/services.html
@@ -91,11 +91,11 @@
 
   <div class="navbar">
     <a href="/index.html">Home</a>
-    <a href="/login-Alysha/login.html">Account</a>
-    <a href="/Insurance-Jimi/insurance.html">Insurance</a>
-    <a href="/scheme-Javier/schemes.html">Scheme and subsidies</a>
-    <a href="/payment-Silin/payment.html">Payment</a>
-    <a href="/service-Jerald/services.html">Services</a>
+    <a href="/login.html">Account</a>
+    <a href="/insurance.html">Insurance</a>
+    <a href="/schemes.html">Scheme and subsidies</a>
+    <a href="/payment.html">Payment</a>
+    <a href="/services.html">Services</a>
   </div>
 
 
@@ -110,7 +110,7 @@
       <p>A consultation with a doctor or other expert is a meeting with them to discuss a particular problem and get
         their advice. Consultation is the process of getting advice from a doctor or other expert. A personal diet plan
         is devised after a consultation with a nutritionist.</p>
-      <button type="button" onclick="window.location.href='/service - Jerald/description.html'">Enquire more</button>
+      <button type="button" onclick="window.location.href='/description.html'">Enquire more</button>
     </div>
     <div class="section">
       <h3>Short term care ward</h3>
@@ -119,7 +119,7 @@
         alt="Short term care ward">
       <p>A short-stay ward is a ward in an accident and emergency department of a restructured hospital for patients who
         need a short period of inpatient monitoring and treatment.</p>
-      <button type="button" onclick="window.location.href='/service - Jerald/dateward.html'">Enquire more</button>
+      <button type="button" onclick="window.location.href='/dateward.html'">Enquire more</button>
     </div>
     <div class="section">
       <h3>Long term care ward</h3>
@@ -129,7 +129,7 @@
       <p>LTC wards provide long-term care for older adults with severe physical and cognitive problems under the
         national healthcare insurance system. Patients in LTC wards are generally admitted from acute/subacute hospital
         wards after acute treatments, or from home due to exacerbation of their disease conditions.</p>
-      <button type="button" onclick="location.href='/service-Jerald/cart.html'">Enquire more</button>
+      <button type="button" onclick="location.href='/cart.html'">Enquire more</button>
     </div>
   </div>
 
